Update transition elements.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <center><h2>See why Phoenix chooses Paris Painting Studio</h2></center>
       <br><br>
       <div class="col50">
-        Some text...
+        Yee
       </div>
       <div class="col50">
         <iframe width="100%" height="315" src="https://www.youtube-nocookie.com/embed/ATSgwZXOuUo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
