Add video/testimonial section to homepage.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,15 @@
       <center><h2>See why Phoenix chooses Paris Painting Studio</h2></center>
       <br><br>
       <div class="col50">
-        Yee
+        <center>
+          <h3>~ Testimonials ~</h3>
+          <br>
+          <h4 class="testimonial-bg">We recently used Paris Painting, LLC to paint the exterior of our home. Their proposal was adhered to and all work was done to our satisfaction. We were very impressed with the crew; felt in good hand from beginning to end.</h4>
+          <h4><em>-Dennis K.</em><br><span class="gold-text">*****</span></h4>
+          <br><br>
+          <h4 class="testimonial-bg">Jules will always be our go-to painter for both interior and exterior paint projects. Not only is she extremely professional, she is on time, is eager to help and give advice when it comes to choosing paint colors.</h4>
+          <h4<em>-Nini &amp; Pat Chorpenning, Sr.<br><span class="gold-txt">*****</span></h4>
+        </center>
       </div>
       <div class="col50">
         <iframe width="100%" height="315" src="https://www.youtube-nocookie.com/embed/ATSgwZXOuUo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
