Fix testimonial stars on second testimonial. Style services list.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <br>
         <div class="col50">
           <ul class="margin-list">
-            <li>FREE color consult</li>
+            <li><em>FREE</em> color consult</li>
             <li>cabinet refinishing</li>
             <li>custom finishes</li>
             <li>epoxy floor finishes</li>
@@ -95,7 +95,7 @@
             <li>upgraded lighting installation</li>
             <li>baseboard replacement</li>
             <li>stucco walls</li>
-            <li>AND staging to sell!</li>
+            <li><em>AND</em> staging to sell!</li>
           </ul>
         </div>
       </div>
@@ -116,7 +116,7 @@
           <h4><em>-Dennis K.</em><br><span class="gold-text">*****</span></h4>
           <br><br>
           <h4 class="testimonial-bg">Jules will always be our go-to painter for both interior and exterior paint projects. Not only is she extremely professional, she is on time, is eager to help and give advice when it comes to choosing paint colors.</h4>
-          <h4<em>-Nini &amp; Pat Chorpenning, Sr.<br><span class="gold-txt">*****</span></h4>
+          <h4><em>-Nini &amp; Pat Chorpenning, Sr.<br><span class="gold-text">*****</span></h4>
         </center>
       </div>
       <div class="col50">
