Close <em> tag after last testimonial.

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <h4><em>-Dennis K.</em><br><span class="gold-text">*****</span></h4>
           <br><br>
           <h4 class="testimonial-bg">Jules will always be our go-to painter for both interior and exterior paint projects. Not only is she extremely professional, she is on time, is eager to help and give advice when it comes to choosing paint colors.</h4>
-          <h4><em>-Nini &amp; Pat Chorpenning, Sr.<br><span class="gold-text">*****</span></h4>
+          <h4><em>-Nini &amp; Pat Chorpenning, Sr.</em><br><span class="gold-text">*****</span></h4>
         </center>
       </div>
       <div class="col50">
