Update content in services section.

--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
         <img src="http://www.parispaintingstudio.com/uploads/1/0/8/8/108810317/kitchen-painting-paris-painting-slide-3_orig.png" style="width: 100%;">
       </div>
       <div class="floating_box_60 float-right white-bg-trans">
-        <h2><em>More Than Just Painters!</em></h2>
+        <h2><em>Your One-Stop Painting Specialists</em></h2>
         <br>
-        <h4>We want to make sure your project is finished <em>perfectly</em>, which is why we offer these <em>additional</em> services:</h4>
+        <h4>We finish your project completely and perfectly, all with <em>exceptional</em> results!</h4>
         <br>
         <div class="col50">
           <ul class="margin-list">
