Add spotlight zoom functionality.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
   <!-- fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Merriweather+Sans|Cabin|Courgette" rel="stylesheet">
+
 </head>
 
 <!-- content starts here -->
@@ -36,7 +37,8 @@
   </div>
 
   <!-- spotlight -->
-  <div id="spotlight_bg">
+  <div id="spotlight_bg_container">
+    <div id="spotlight_bg"></div>
     <div class="container">
       <div id="spotlight_container">
         <center><h1>Residential &amp; Commercial Painting for the Phoenix/Scottsdale Area</h1></center>
@@ -80,7 +82,7 @@
       <div class="floating_box_60 float-right white-bg-trans">
         <h2><em>Your One-Stop Painting Specialists</em></h2>
         <br>
-        <h4>We finish your project completely and perfectly, all with <em>exceptional</em> results!</h4>
+        <h4>We finish your project completely and perfectly, always with <em>exceptional</em> results!</h4>
         <br>
         <div class="col50">
           <ul class="margin-list">
@@ -114,7 +116,7 @@
           <br>
           <h4 class="testimonial-bg">We recently used Paris Painting, LLC to paint the exterior of our home. Their proposal was adhered to and all work was done to our satisfaction. We were very impressed with the crew; felt in good hand from beginning to end.</h4>
           <h4><em>-Dennis K.</em><br><span class="gold-text">*****</span></h4>
-          <br><br>
+          <br>
           <h4 class="testimonial-bg">Jules will always be our go-to painter for both interior and exterior paint projects. Not only is she extremely professional, she is on time, is eager to help and give advice when it comes to choosing paint colors.</h4>
           <h4><em>-Nini &amp; Pat Chorpenning, Sr.</em><br><span class="gold-text">*****</span></h4>
         </center>
