Add footer code.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <!-- call panel -->
   <div id="call_panel" class="accent-bg">
     <div class="container">
-      <h4><span class="cursive">Paint With <u>Confidence</u>!</span> &nbsp; |  &nbsp; We are licensed, bonded, and insured.</h4>
+      <h4 style="display: inline"><span class="cursive">Paint With <u>Confidence</u>!</span> &nbsp; |  &nbsp; We are licensed, bonded, and insured.</h4>
     </div>
   </div>
 
@@ -128,6 +128,13 @@
     </div>
   </div>
 
+  <!-- paint brands and stuff -->
+  <div id="first" class="light-blue-bg pad-reg">
+    <div class="container">
+      <center><a href="https://www.sherwin-williams.com/homeowners/color/find-and-explore-colors/paint-colors-by-family" target="_blank"><img src="http://www.parispaintingstudio.com/uploads/1/0/8/8/108810317/paris-painting-sherman-williams-paints_orig.png" style="width: 200px;"></a></center>
+    </div>
+  </div>
+
   <!-- small panel -->
   <div id="small_panel" class="accent-bg">
     <div class="container">
@@ -149,13 +156,28 @@
   </div>
 
   <!-- footer -->
-  <!-- hmmm......
-  <div id="footer" class="blue-bg">
+  <div id="footer" class="blue-bg pad-reg white_text">
     <div class="container">
-      Hello.
+      <div class="col40">
+        <h2>Always available to chat.</h2>
+        <h3 class="white_text">Contact us today to discuss your painting needs!</h3>
+        <br><br>
+        <h4>Phone: <em>(480) 677-9087</em></h4>
+        <br>
+        <h4>Email: <em>ParisPainting@iCloud.com</em></h4>
+      </div>
+      <div class="col60">
+        <form name="contact" style="text-align: right">
+          <input type="text" class="contact" placeholder="Name">
+          <input type="email" class="contact" placeholder="Email">
+          <input type="telephone" class="contact" placeholder="Phone">
+          <textarea row="10" col="5" class="contact" placeholder="Questions/Comments"></textarea>
+          <input type="button" value="Send Message" class="contact">
+        </form>
+      </div>
+      <div class="clear"></div>
     </div>
   </div>
--->
 
 <a id="bottom"></a>
 
