Styled contact form in footer.

--- a/index.html
+++ b/index.html
@@ -168,10 +168,10 @@
       </div>
       <div class="col60">
         <form name="contact" style="text-align: right">
-          <input type="text" class="contact" placeholder="Name">
-          <input type="email" class="contact" placeholder="Email">
-          <input type="telephone" class="contact" placeholder="Phone">
-          <textarea row="10" col="5" class="contact" placeholder="Questions/Comments"></textarea>
+          <input type="text" class="contact" placeholder="Name"><br>
+          <input type="email" class="contact" placeholder="Email"><br>
+          <input type="telephone" class="contact" placeholder="Phone"><br>
+          <textarea row="10" col="5" class="contact" placeholder="Questions/Comments"></textarea><br>
           <input type="button" value="Send Message" class="contact">
         </form>
       </div>
