Add copyright disclaimer.

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   <!-- small panel -->
   <div id="small_panel" class="accent-bg">
     <div class="container">
-      <center><h2>What can we help you with today?</h2></center>
+      <center><h2>Want to learn more about what we do?</h2></center>
     </div>
   </div>
 
@@ -156,6 +156,7 @@
   </div>
 
   <!-- footer -->
+  <footer>
   <div id="footer" class="blue-bg pad-reg white_text">
     <div class="container">
       <div class="col40">
@@ -172,12 +173,16 @@
           <input type="email" class="contact" placeholder="Email"><br>
           <input type="telephone" class="contact" placeholder="Phone"><br>
           <textarea row="10" col="5" class="contact" placeholder="Questions/Comments"></textarea><br>
-          <input type="button" value="Send Message" class="contact">
+          <input type="button" value="Send Message" class="contact" style="text-align: center">
         </form>
       </div>
       <div class="clear"></div>
     </div>
   </div>
+  <div class="copyright blue-bg">
+    <center><h6 class="white_text">Copyright &copy; 2019. Paris Painting Studio. All Rights Reserved. &nbsp; &nbsp; | &nbsp; &nbsp; Website by <a href="mailto:spiller.riley@gmail.com">Riley Spiller</a>.</p1></center>
+  </div>
+  </footer>
 
 <a id="bottom"></a>
 
