Integrate new logo and semantic HTML.

--- a/index.html
+++ b/index.html
@@ -19,22 +19,21 @@
 <!-- content starts here -->
 <body>
   <!-- top nav -->
-  <div id="top_nav">
-    <div class="container">
-      <div id="logo">
+  <header>
+    <div id="top_nav">
+      <div class="container">
+        <a href="index.html"><img id="logo" src="./img/logo.png" alt="Paris Painting Studio Logo"></a>
+        <nav>
+          <a href="#" class="active">HOME</a>
+          <a href="#">SERVICES</a>
+          <a href="#">ABOUT</a>
+          <a href="#">DeSPOUSE YOUR HOUSE</a>
+          <a href="#">CONTACT</a>
+        </nav>
       </div>
-      <div id="nav_list">
-        <ul id="nav">
-          <a href="#bottom"><li>BOTTOM</li></a>
-          <li>ABOUT</li>
-          <li>PROJECTS</li>
-          <li>DeSPOUSE YOUR HOUSE</li>
-          <li>CONTACT</li>
-        </ul>
-      </div>
+      <div class="clear"></div>
     </div>
-    <div class="clear"></div>
-  </div>
+</header>
 
   <!-- spotlight -->
   <div id="spotlight_bg_container">
