Implement sticky-scroll javascript.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link rel="stylesheet" type="text/css" href="./main.css">
   <link rel="stylesheet" type="text/css" href="./animate.css">
 
+  <!-- javascript -->
+  <script type="text/javascript" src="./sticky-scroll.js"></script>
+
   <!-- fonts -->
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab|Merriweather+Sans|Cabin|Courgette" rel="stylesheet">
 
@@ -18,6 +21,8 @@
 
 <!-- content starts here -->
 <body>
+  <script type="text/javascript" src="./sticky-scroll.js"></script>
+
   <!-- top nav -->
   <header>
     <div id="top_nav">
@@ -44,13 +49,13 @@
         <br>
         <p1>See why the Valley trusts Paris Painting Studio for their Interior and Exterior Painting Applications. Offering only the <em>highest quality</em> products and workmanship, Paris Painting Studio is the #1 choice for homeowners in the Phoenix and Scottsdale areas.</p1>
         <br><br><br>
-        <button class="blue">Get A Quote</button>
+        <a href="contact.html"><button class="blue">Get A Quote</button></a>
       </div>
     </div>
   </div>
 
   <!-- call panel -->
-  <div id="call_panel" class="accent-bg">
+  <div id="call_panel" class="accent-bg sticky-scroll">
     <div class="container">
       <h4 style="display: inline"><span class="cursive">Paint With <u>Confidence</u>!</span> &nbsp; |  &nbsp; We are licensed, bonded, and insured.</h4>
     </div>
@@ -58,7 +63,7 @@
 
   <!-- first panel -->
   <div id="first" class="white-bg pad-sm">
-    <div class="container">
+    <div class="container pad-reg">
       <div class="floating_box_blue_40">
         <h2 class="big-text">PARIS PAINTING STUDIO /</h2>
         <br>
