Update contact nav. Implement flex design in HTML.

--- a/index.html
+++ b/index.html
@@ -58,15 +58,17 @@
   <div id="callPanel" class="primary-analogous-bg to_move_content">
     <div class="container">
       <h4><span class="cursive">Paint With <u>Confidence</u>!</span> &nbsp; |  &nbsp; We are licensed, bonded, and insured.</h4>
-      <h4><a href="tel:4806779087"><img src="img/tel2.png"> (480) 677-9087</a></h4>
+      <h4><a href="mailto:ParisPainting@icloud.com"><img src="img/email.png" alt="Email Us Link">ParisPainting@iCloud.com</a> &nbsp; &nbsp; &nbsp; <a href="tel:4806779087"><img src="img/tel3.png" alt="Call Us Link"> (480) 677-9087</a></h4>
     </div>
   </div>
 
+  <article>
+  <section>
   <!-- first panel -->
   <div id="first" class="white-bg pad-sm">
     <div class="container pad-reg">
       <div class="floating_box_blue_40">
-        <h2 class="big-text">PARIS PAINTING STUDIO /</h2>
+        <h1 class="big-text">PARIS PAINTING STUDIO /</h1>
         <br>
         <h4>Whether you&#39;re looking to refresh your existing colors or to completely reinvent your style, Paris Painting has the experience and workmanship required to finish your project in a timely and professional manner.</h4>
       </div>
@@ -77,7 +79,9 @@
     <div class="clear"></div>
     </div>
   </div>
+  </section>
 
+  <section>
   <!-- light-bg -->
   <div id="first" class="light-bg pad-reg">
     <div class="container white-bg white-corner-border">
@@ -87,7 +91,7 @@
       <div class="floating_box_60 float-right white-bg-trans">
         <h2><em>Your One-Stop Painting Specialists</em></h2>
         <br>
-        <h4>We finish your project completely and perfectly, always with <em>exceptional</em> results!</h4>
+        <h4>Offering a wide range of services, we do more than just paint! We take care of your project from start to finish, ensuring a final product of exceptional quality.</h4>
         <br>
         <div class="col50">
           <ul class="margin-list">
@@ -109,30 +113,35 @@
       <div class="clear"></div>
     </div>
   </div>
+  </section>
 
+  <section>
   <!-- video and testimonials -->
   <div id="first" class="white-bg pad-reg">
     <div class="container">
-      <center><h2>See why Phoenix chooses Paris Painting Studio</h2></center>
+      <center><h2><em>See why Phoenix chooses Paris Painting Studio</em></h2></center><br>
+      <center><h4>Timely Services. Professional Results. Big Smiles.</h4></center>
       <br><br>
-      <div class="col50">
-        <center>
-          <h3>~ Testimonials ~</h3>
+      <div class="flex-col50 light-bg">
+      <div class="testimonials">
+          <h3>Kind Words from Happy Clients</h3>
           <br>
           <h4 class="testimonial-bg">We recently used Paris Painting, LLC to paint the exterior of our home. Their proposal was adhered to and all work was done to our satisfaction. We were very impressed with the crew; felt in good hand from beginning to end.</h4>
           <h4><em>-Dennis K.</em><br><span class="gold-text">*****</span></h4>
           <br>
           <h4 class="testimonial-bg">Jules will always be our go-to painter for both interior and exterior paint projects. Not only is she extremely professional, she is on time, is eager to help and give advice when it comes to choosing paint colors.</h4>
           <h4><em>-Nini &amp; Pat Chorpenning, Sr.</em><br><span class="gold-text">*****</span></h4>
-        </center>
       </div>
-      <div class="col50">
+      <div class="video">
         <iframe width="100%" height="315" src="https://www.youtube-nocookie.com/embed/ATSgwZXOuUo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
       </div>
       <div class="clear"></div>
     </div>
   </div>
+  </section>
 
+  <aside>
   <!-- paint brands and stuff -->
   <div id="first" class="light-blue-bg pad-reg">
     <div class="container">
@@ -142,7 +151,9 @@
       </div>
     </div>
   </div>
+  </aside>
 
+  <aside>
   <!-- small panel -->
   <div id="small_panel" class="primary-bg">
     <div class="container">
@@ -167,6 +178,8 @@
     </div>
     <div class="clear"></div>
   </div>
+  </aside>
+  </article>
 
   <!-- footer -->
   <footer>
