Update testimonial section.

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   <!-- video and testimonials -->
   <div id="first" class="white-bg pad-reg">
     <div class="container">
-      <center><h2><em>See why Phoenix chooses Paris Painting Studio</em></h2></center><br>
+      <center><h2><em>See why the Valley recommends Paris Painting Studio</em></h2></center><br>
       <center><h4>Timely Services. Professional Results. Big Smiles.</h4></center>
       <br><br>
       <div class="flex-col50 light-bg">
