Remove 'services grid' via comment out.

--- a/index.html
+++ b/index.html
@@ -153,15 +153,16 @@
   </div>
   </aside>
 
+  <!--
   <aside>
-  <!-- small panel -->
+  <!-- small panel --/>
   <div id="small_panel" class="primary-bg">
     <div class="container">
       <center><h2>More About Our Services</h2></center>
     </div>
   </div>
 
-  <!-- split panel -->
+  <!-- split panel --/>
   <div id="split_panel_container">
     <div id="split_panel" class="panel_1">
       <div class="panel_1_bg"></div>
@@ -180,6 +181,7 @@
   </div>
   </aside>
   </article>
+  -->
 
   <!-- footer -->
   <footer>
@@ -189,9 +191,9 @@
         <h2>Always available to chat.</h2>
         <h3 class="white_text">Contact us today to discuss your painting needs!</h3>
         <br><br>
-        <h4>Phone: <em>(480) 677-9087</em></h4>
+        <h4>Phone: <a href="tel:4806779087"><em>(480) 677-9087</em></a></h4>
         <br>
-        <h4>Email: <em>ParisPainting@iCloud.com</em></h4>
+        <h4>Email: <a href="mailto:parispainting@icloud.com"><em>ParisPainting@iCloud.com</em></a></h4>
       </div>
       <div class="col30">
         <input type="text" name="name" class="contact" placeholder="Name">
@@ -199,7 +201,8 @@
         <input type="tel" name="telephone" class="contact" placeholder="Phone">
       </div>
       <div class="col30">
-        <textarea class="contact" name="message" placeholder="Message"></textarea>
+        <textarea class="contact" name="message" placeholder="Message" rows="5"></textarea>
+        <button type="submit" class="button-submit contact">Send Message</button>
       </div>
       <div class="clear"></div>
     </div>
