Add social media links.

--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
             <li><em>AND</em> staging to sell!</li>
           </ul>
         </div>
+        <div class="clear"></div>
+        <br>
+        <a href="services.html" class="call-to-get-more"><em>Learn more...</em></a>
       </div>
       <div class="clear"></div>
     </div>
@@ -194,6 +197,8 @@
         <h4>Phone: <a href="tel:4806779087"><em>(480) 677-9087</em></a></h4>
         <br>
         <h4>Email: <a href="mailto:parispainting@icloud.com"><em>ParisPainting@iCloud.com</em></a></h4>
+        <br>
+        <a href="#" class="social-media"><img src="img/fb.png"></a> &nbsp; <a href="#" class="social-media"><img src="img/ig.png"></a>
       </div>
       <div class="col30">
         <input type="text" name="name" class="contact" placeholder="Name">
@@ -207,7 +212,7 @@
       <div class="clear"></div>
     </div>
   </div>
-  <div class="copyright blue-bg">
+  <div class="copyright">
     <center><h6 class="white_text">Copyright &copy; 2019. Paris Painting Studio. All Rights Reserved. &nbsp; &nbsp; | &nbsp; &nbsp; Website by <a href="mailto:spiller.riley@gmail.com">Riley Spiller</a>.</p1></center>
   </div>
   </footer>
