--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
       <div class="container">
         <a href="index.html"><img id="logo" src="./img/logo.png" alt="Paris Painting Studio Logo"></a>
         <nav>
-          <a href="#" class="active">HOME</a>
-          <a href="#">SERVICES</a>
-          <a href="#">ABOUT</a>
-          <a href="#">DeSPOUSE YOUR HOUSE</a>
-          <a href="#">CONTACT</a>
+          <a href="index.html" class="active">HOME</a>
+          <a href="services.html">SERVICES</a>
+          <a href="about.html">ABOUT</a>
+          <a href="despouse-your-house.html">DeSPOUSE YOUR HOUSE</a>
+          <a href="contact.html">CONTACT</a>
         </nav>
       </div>
       <div class="clear"></div>
@@ -219,34 +219,8 @@
 
 <a id="bottom"></a>
 
-<script>
-
-// STICKY SCROLL CLASS
-if($(window).width() >= 400){
-    (function($) {
-        var element = $('.to_move_content'),
-            header = $('#top_nav'),
-            originalY = (element.offset().top) - 76;
-
-        // Space between element and top of screen (when scrolling)
-        var topMargin = 0;
-
-        // Should probably be set in CSS; but here just for emphasis
-        element.addClass('sticky');
-
-        $(window).on('scroll', function(event) {
-            var scrollTop = $(window).scrollTop();
-
-            element.stop(false, false).animate({
-                top: scrollTop < originalY
-                    ? 0
-                    : scrollTop - originalY + topMargin
-            }, 0);
-        });
-    })(jQuery);
-}
-
-</script>
+<!-- Javascript -->
+<script type="text/javascript" src="sticky-scroll.js"></script>
 
 </body>
 
