Add minor tweaks.

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   <article>
   <section>
   <!-- first panel -->
-  <div id="first" class="white-bg pad-sm">
+  <div id="first" class="white-bg pad-reg" style="padding-bottom: 20px">
     <div class="container pad-reg">
       <div class="floating_box_blue_40">
         <h1 class="big-text">PARIS PAINTING STUDIO /</h1>
