Add more services.

--- a/services.html
+++ b/services.html
@@ -74,7 +74,7 @@
         <br>
         <h4>When we take on a project, we take on <em>every</em> aspect of it. From <strong>baseboard replacement</strong> and <strong>cabinet refinishing</strong> to <strong>epoxy floor coating</strong> and <strong>more</strong>, we have the experience and skills to complete your job completely and professionally.</h4>
         <br>
-        <h4>There is a reason <em>our clients love us</em> and keep coming back for more! Our dedicated team will take care of you and your project from start to finish, as we make sure every requirement and desire of yours is met.</h4>
+        <h4>There is a reason <em>our clients love us</em> and keep coming back for more! Our dedicated team will take care of you and your project from start to finish, as we make sure to meet every requirment and desire you have.</h4>
       </div>
       <div class="col40">
         <img src="http://www.parispaintingstudio.com/uploads/1/0/8/8/108810317/things-to-know-before-buying-a-house_1_orig.jpg" style="width: 85%; float: right" class="polaroid tilt-right">
@@ -87,8 +87,12 @@
 
   <section>
   <!-- light-bg -->
-  <div id="first" class="light-blue-bg pad-reg">
+  <div id="first" class="light-blue-bg pad-sm">
     <br><br>
+
+    <div class="container">
+      <h1 class="jumbo_text white_text">RESIDENTIAL &amp; COMMERCIAL</h1>
+    </div>
 
     <!-- exterior paint solutions -->
     <div class="container white-bg white-corner-border">
@@ -133,6 +137,22 @@
       </div>
       <div class="clear"></div>
     </div>
+    <br><br>
+
+    <!-- epoxy floors -->
+    <div class="container white-bg white-corner-border">
+      <div class="col30">
+        <img src="https://c.pxhere.com/images/a2/83/bc54a26db18473585e1a5860858e-1590327.jpg!d" style="width: 80%;">
+      </div>
+      <div class="floating_box_60 white-bg-trans">
+        <h2><em>EPOXY FLOOR Finishes</h2>
+        <br>
+        <h4>For garages, commercial buildings, or just for a unique look in your home, epoxy floors look sleek and are easy to clean. Just another one of the excellent services we offer!</h4>
+        <div class="clear"></div>
+      </div>
+      <div class="clear"></div>
+    </div>
+    <br><br>
   </div>
   </section>
 
